--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -54,16 +54,20 @@ a {
 p {
     font-size: 16px;
 }
-
+/* Hero Img Styling */
 .hero {
+
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
-}
 
+}
+/* Hero Img End */
+
+/* General 2 column content styles */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -74,11 +78,13 @@ p {
     margin-left: 25px;
 }
 
-.content {
+section {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
+/* Benefit styles */
 
 .benefits {
     margin-right: 20px;
@@ -138,7 +144,11 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* Benefits Styles End */
 
+
+
+/* Main content styles */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -166,6 +176,12 @@ p {
     color: #ffffff;
 }
 
+section img {
+    max-height: 200px;
+}
+/* 
+
+
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -178,6 +194,14 @@ p {
     max-height: 200px;
 }
 
+*/
+
+section h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -193,13 +217,21 @@ p {
     font-size: 36px;
 }
 
-.footer {
+
+/* Main Content styles end */
+
+
+
+
+
+/* Footer Styles */ 
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
