--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -86,7 +86,7 @@ section {
 
 /* Benefit styles */
 
-.benefits {
+article {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -97,6 +97,12 @@ section {
     background-color: #2589bd;
 }
 
+article div {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+/* OMITTED CODE 
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -111,7 +117,14 @@ section {
     margin-bottom: 32px;
     color: #ffffff;
 }
+*/
 
+article h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+/* OMITTED CODE
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -126,7 +139,15 @@ section {
     margin-bottom: 10px;
     text-align: center;
 }
+*/
 
+article img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* OMITTED CODE 
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -144,11 +165,24 @@ section {
     margin: 10px auto;
     max-width: 150px;
 }
+*/
+
 /* Benefits Styles End */
 
 
 
 /* Main content styles */
+
+section div {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+/* OMITTED CODE 
+
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -175,11 +209,12 @@ section {
     background-color: #0072bb;
     color: #ffffff;
 }
+*/
 
 section img {
     max-height: 200px;
 }
-/* 
+/* OMITTED CODE
 
 
 .search-engine-optimization img {
@@ -201,7 +236,7 @@ section h2 {
     font-size: 36px;
 }
 
-/*
+/* OMITTED CODE
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
